added css to site

--- a/gallery.html
+++ b/gallery.html
@@ -1,72 +1,76 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Professor Hubert J. Farnsworth | Gallery</title>
-</title>
+    <title>Professor Hubert J. Farnsworth | Gallery</title>
+    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/typography.css">
+    <link rel="stylesheet" href="styles/color.css">
+    </title>
 </head>
-<body>
-	<header>
-		<h1>
-			Gallery		
-		</h1>
-	</header>	
-	<nav>
-		<h2 style="position: absolute; visibility: hidden;">Navigation</h2>
-		<ul>
-			<li>
-				<a href="./index.html">				
-					Home
-				</a>
-			</li>
-			<li>
-				<a href="./about.html">				
-					About the Professor
-				</a>
-			</li>
-			<li>
-				<a href="./gallery.html">				
-					Memorable Moments
-				</a>
-			</li>
-			<li>
-				<a href="./work.html">				
-					Inventions
-				</a>
-			</li>
-			<li>
-				<a href="./blog.html">				
-					Blog
-				</a>
-			</li>
-			<li>
-				<a href="./contact.html">				
-					Contact Him
-				</a>
-			</li>
-		</ul>
-	</nav>
-	<main>
-		<h2>Memorable Moments</h2>
-		<ul>
-			<li>
-				<figure>
-					<img src="http://www.memegasms.com/media/created/vhyfxm.jpg" alt="Farnsworth">
-					<figcaption>Good news everyone!</figcaption>
-				</figure>
-			</li>
-			<li>
-				<figure>
-					<img src="https://hollywoodhatesme.files.wordpress.com/2011/09/prof-farnsworth.jpg" alt="What if machine">
-					<figcaption>What if?</figcaption>
-				</figure>
-			</li>
-			<li>
-				<figure>
-					<img src="http://data1.whicdn.com/images/60321699/large.jpg" alt="What if machine">
-					<figcaption>I don't want to live on this planet anymore.</figcaption>
-				</figure>
-			</li>
-		</ul>
-	</main>
+<body class="background-color body-margin">
+<header class="header-bg-color">
+    <h1 class="main-font light-color header-title-layout">
+        Gallery
+    </h1>
+</header>
+<nav>
+    <h2 style="position: absolute; visibility: hidden;">Navigation</h2>
+    <ul class="main-font light-color menu-inline">
+        <li>
+            <a href="./index.html">
+                Home
+            </a>
+        </li>
+        <li>
+            <a href="./about.html">
+                About the Professor
+            </a>
+        </li>
+        <li>
+            <a href="./gallery.html">
+                Memorable Moments
+            </a>
+        </li>
+        <li>
+            <a href="./work.html">
+                Inventions
+            </a>
+        </li>
+        <li>
+            <a href="./blog.html">
+                Blog
+            </a>
+        </li>
+        <li>
+            <a href="./contact.html">
+                Contact Him
+            </a>
+        </li>
+    </ul>
+</nav>
+<main class="main-container-color main-container light-color main-font">
+    <h2>Memorable Moments</h2>
+    <ul>
+        <li>
+            <figure>
+                <img src="http://www.memegasms.com/media/created/vhyfxm.jpg" alt="Farnsworth">
+                <figcaption>Good news everyone!</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <img src="https://hollywoodhatesme.files.wordpress.com/2011/09/prof-farnsworth.jpg"
+                     alt="What if machine">
+                <figcaption>What if?</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <img src="http://data1.whicdn.com/images/60321699/large.jpg" alt="What if machine">
+                <figcaption>I don't want to live on this planet anymore.</figcaption>
+            </figure>
+        </li>
+    </ul>
+</main>
 </body>
 </html>
