homepage image float right, fix css classes on all pages

--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
         About the Professor
     </h1>
 </header>
-<nav>
+<nav class="clearfix">
     <h2 style="position: absolute; visibility: hidden;">Navigation</h2>
-    <ul class="main-font light-color menu-inline">
+    <ul class="main-font light-color menu-float no-bullet">
         <li>
             <a href="./index.html">
                 Home
