--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
         Make Contact
     </h1>
 </header>
-<nav>
+<nav class="clearfix">
     <h2 style="position: absolute; visibility: hidden;">Navigation</h2>
-    <ul class="main-font light-color menu-inline">
+    <ul class="main-font light-color menu-float no-bullet">
         <li>
             <a href="./index.html">
                 Home
@@ -46,8 +46,7 @@
             </a>
         </li>
     </ul>
-</nav>
-<main class="main-container-color main-container light-color main-font">
+</nav><main class="main-container-color main-container light-color main-font">
     <h2>Questions?</h2>
 
     <p>Got a question you'd like to ask the professor? You're in the right spot!</p>
