--- a/work.html
+++ b/work.html
@@ -13,9 +13,9 @@
         Inventions
     </h1>
 </header>
-<nav>
+<nav class="clearfix">
     <h2 style="position: absolute; visibility: hidden;">Navigation</h2>
-    <ul class="main-font light-color menu-inline">
+    <ul class="main-font light-color menu-float no-bullet">
         <li>
             <a href="./index.html">
                 Home
@@ -47,8 +47,7 @@
             </a>
         </li>
     </ul>
-</nav>
-<main class="main-container-color main-container light-color main-font">
+</nav><main class="main-container-color main-container light-color main-font">
     <section>
         <h2>Creations</h2>
 
