--- a/gallery.html
+++ b/gallery.html
@@ -13,9 +13,9 @@
         Gallery
     </h1>
 </header>
-<nav>
+<nav class="clearfix">
     <h2 style="position: absolute; visibility: hidden;">Navigation</h2>
-    <ul class="main-font light-color menu-inline">
+    <ul class="main-font light-color menu-float no-bullet">
         <li>
             <a href="./index.html">
                 Home
