--- a/index.html
+++ b/index.html
@@ -1,67 +1,79 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Professor Hubert J. Farnsworth</title>
-	<link rel="stylesheet" href="styles/layout.css">
-	<link rel="stylesheet" href="styles/typography.css">
-	<link rel="stylesheet" href="styles/color.css">
+    <title>Professor Hubert J. Farnsworth</title>
+    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/typography.css">
+    <link rel="stylesheet" href="styles/color.css">
 </head>
 <body class="background-color body-margin">
-	<header class="header-bg-color">
-		<h1 class="main-font light-color header-title-layout">
-			Home
-		</h1>
-	</header>	
-	<nav>
-		<h2 style="position: absolute; visibility: hidden;">Navigation</h2>
-		<ul class="main-font light-color menu-inline">
-			<li>
-				<a href="./index.html">
-					Home
-				</a>
-			</li>
-			<li>
-				<a href="./about.html">				
-					About the Professor
-				</a>
-			</li>
-			<li>
-				<a href="./gallery.html">				
-					Memorable Moments
-				</a>
-			</li>
-			<li>
-				<a href="./work.html">				
-					Inventions
-				</a>
-			</li>
-			<li>
-				<a href="./blog.html">				
-					Blog
-				</a>
-			</li>
-			<li>
-				<a href="./contact.html">				
-					Contact Him
-				</a>
-			</li>
-		</ul>
-	</nav>
-	<main class="main-container-color main-container light-color">
-		<article>
-			<h2 class="main-font">Professor Hubert J. Farnsworth</h2>
-			<p class="main-font">
-				Professor Hubert J. Farnsworth is an aged, eccentric, yet accomplished inventor, founder and owner of Planet Express and an honorary Globetrotter. He is crotchety, absent-minded and sometimes brilliant, most well-known for his work in 30th century robotics. In 2999, he was the last known relative of Philip J. Fry. Later, Professor Farnsworth discovered that he had fathered a son, as well as the clone that he had kept hidden. In addition, he also serves as a tenured professor at Mars University teaching the Mathematics of Quantum Neutrino Fields. Farnsworth is an inventor of both useful and impractical things, some of which are extremely dangerous, such as his Doomsday devices.
-				Personality-wise, he varies from callous disregard to sentimental affection. He has no objection to sending his crew on missions which may eventually kill them, and has sent previous crews to their deaths before. (At times, he even seems eager to send crews on life-threatening missions.) Farnsworth is the oldest living member of the Academy of Inventors, where he often competes with his arch nemesis, Dr. Ogden Wernstrom.
-			</p>
-		</article>
-		<aside>
-			<img src="http://theinfosphere.org/images/6/66/Farnsworth_promo_2.jpg" alt="Professor Hubert J. Farnsworth" class="center">
-			<blockquote class="main-font img-quote">
-				Oh, and if you kill anyone, make sure to eat their heart to gain their courage, their rich, tasty courage. [He smacks lips.]
-				<cite>-Professor Farnsworth.</cite>
-			</blockquote>
-		</aside>
-	</main>
+<header class="header-bg-color">
+    <h1 class="main-font light-color header-title-layout">
+        Home
+    </h1>
+</header>
+<nav class="clearfix">
+    <h2 style="position: absolute; visibility: hidden;">Navigation</h2>
+    <ul class="main-font light-color menu-float no-bullet">
+        <li>
+            <a href="./index.html">
+                Home
+            </a>
+        </li>
+        <li>
+            <a href="./about.html">
+                About the Professor
+            </a>
+        </li>
+        <li>
+            <a href="./gallery.html">
+                Memorable Moments
+            </a>
+        </li>
+        <li>
+            <a href="./work.html">
+                Inventions
+            </a>
+        </li>
+        <li>
+            <a href="./blog.html">
+                Blog
+            </a>
+        </li>
+        <li>
+            <a href="./contact.html">
+                Contact Him
+            </a>
+        </li>
+    </ul>
+</nav>
+
+<main class="main-container-color main-container light-color main-font">
+    <article class="clearfix">
+        <h2>Professor Hubert J. Farnsworth</h2>
+        <aside class="float-right">
+            <img src="http://theinfosphere.org/images/6/66/Farnsworth_promo_2.jpg" alt="Professor Hubert J. Farnsworth"
+                 class="img-size">
+            <blockquote class="img-quote">
+                Oh, and if you kill anyone, make sure to eat their heart to gain their courage, their rich, tasty
+                courage. [He smacks lips.]
+                <cite>-Professor Farnsworth.</cite>
+            </blockquote>
+        </aside>
+        <p>
+            Professor Hubert J. Farnsworth is an aged, eccentric, yet accomplished inventor, founder and owner of Planet
+            Express and an honorary Globetrotter. He is crotchety, absent-minded and sometimes brilliant, most
+            well-known for his work in 30th century robotics. In 2999, he was the last known relative of Philip J. Fry.
+            Later, Professor Farnsworth discovered that he had fathered a son, as well as the clone that he had kept
+            hidden. In addition, he also serves as a tenured professor at Mars University teaching the Mathematics of
+            Quantum Neutrino Fields. Farnsworth is an inventor of both useful and impractical things, some of which are
+            extremely dangerous, such as his Doomsday devices.
+            Personality-wise, he varies from callous disregard to sentimental affection. He has no objection to sending
+            his crew on missions which may eventually kill them, and has sent previous crews to their deaths before. (At
+            times, he even seems eager to send crews on life-threatening missions.) Farnsworth is the oldest living
+            member of the Academy of Inventors, where he often competes with his arch nemesis, Dr. Ogden Wernstrom.
+        </p>
+    </article>
+</main>
 </body>
 </html>
