added a break before images for work page

--- a/work.html
+++ b/work.html
@@ -65,7 +65,8 @@
                 because of a self-destruct chip Bender used when turning it into a robot thinking it was an Empathy
                 Chip. However, Professor Farnsworth implied that the machine would be fixed in a year. Every time
                 Farnsworth activates the machine, he uses a different button, lever, knob, or switch.
-                <img src="http://theinfosphere.org/images/9/98/What_if_Machine.jpg" alt="What if machine">
+                <br/>
+                <img src="http://theinfosphere.org/images/9/98/What_if_Machine.jpg" alt="What if machine"/>
             </dd>
             <dt>Smell-O-Scope</dt>
             <dd>
@@ -82,6 +83,7 @@
                 It is possible for the Smell-O-Scope to be mounted to the ship in order to track a smell to its origin.
                 [2ACV10] It also caused the death of Nudar's time-paradox duplicate by crushing him after Farnsworth
                 leant on it.
+                <br/>
                 <img src="http://theinfosphere.org/images/1/18/Smell-O-Scope.png" alt="Smell-O-Scope">
             </dd>
             <dt>Device that makes anyone sound like Farnsworth</dt>
@@ -92,6 +94,7 @@
                 (3ACV12). There's no target market for this device, only potential consumer, which Farnsworth describes
                 as targets that will tremble in fear as their new masters hand down edicts in his glorious, booming
                 voice.
+                <br/>
                 <img src="http://theinfosphere.org/images/5/54/Farnsworthsounddevice.png"
                      alt="Device that makes anyone sound like Farnsworth">
             </dd>
