reworked blog pictures, contact form restyle

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <main class="main-container-color main-container light-color main-font">
     <article class="clearfix">
         <h2>Professor Hubert J. Farnsworth</h2>
-        <aside class="float-right">
+        <aside class="right-side-img">
             <img src="http://theinfosphere.org/images/6/66/Farnsworth_promo_2.jpg" alt="Professor Hubert J. Farnsworth"
                  class="img-size">
             <blockquote class="img-quote">
