--- a/work.html
+++ b/work.html
@@ -47,7 +47,8 @@
             </a>
         </li>
     </ul>
-</nav><main class="main-container-color main-container light-color main-font">
+</nav>
+<main class="main-container-color main-container light-color main-font">
     <section>
         <h2>Creations</h2>
 
@@ -56,7 +57,7 @@
             down right crazy.
             Here is a list of the Professor's inventions (in alphabetical order)
         </p>
-        <dl>
+        <dl class="project-list">
             <dt>What if machine</dt>
             <dd>
                 The What-If Machine is a machine made out of gold that displays scenarios. These scenarios are given in
@@ -66,7 +67,8 @@
                 Chip. However, Professor Farnsworth implied that the machine would be fixed in a year. Every time
                 Farnsworth activates the machine, he uses a different button, lever, knob, or switch.
                 <br/>
-                <img src="http://theinfosphere.org/images/9/98/What_if_Machine.jpg" alt="What if machine"/>
+                <img src="http://theinfosphere.org/images/9/98/What_if_Machine.jpg" alt="What if machine"
+                     class="img-container project-item-img" width="100%"/>
             </dd>
             <dt>Smell-O-Scope</dt>
             <dd>
@@ -84,7 +86,8 @@
                 [2ACV10] It also caused the death of Nudar's time-paradox duplicate by crushing him after Farnsworth
                 leant on it.
                 <br/>
-                <img src="http://theinfosphere.org/images/1/18/Smell-O-Scope.png" alt="Smell-O-Scope">
+                <img src="http://theinfosphere.org/images/1/18/Smell-O-Scope.png" alt="Smell-O-Scope"
+                     class="img-container project-item-img" width="100%">
             </dd>
             <dt>Device that makes anyone sound like Farnsworth</dt>
             <dd>
@@ -96,7 +99,7 @@
                 voice.
                 <br/>
                 <img src="http://theinfosphere.org/images/5/54/Farnsworthsounddevice.png"
-                     alt="Device that makes anyone sound like Farnsworth">
+                     alt="Device that makes anyone sound like Farnsworth" class="img-container project-item-img" width="100%">
             </dd>
         </dl>
     </section>
@@ -106,7 +109,7 @@
         </h3>
 
         <p>
-            Professor Farnsworth has been given the following awards.
+            Professor Farnsworth has been given the following awards:
         </p>
         <ul>
             <li>The <a href="http://theinfosphere.org/Academy_of_Inventors">Academy of Inventors</a> award of 3000
