--- a/contact.html
+++ b/contact.html
@@ -46,54 +46,59 @@
             </a>
         </li>
     </ul>
-</nav><main class="main-container-color main-container light-color main-font">
+</nav>
+<main class="main-container-color main-container light-color main-font">
     <h2>Questions?</h2>
 
-    <p>Got a question you'd like to ask the professor? You're in the right spot!</p>
+    <p class="form-intro">Got a question you'd like to ask the professor? You're in the right spot!</p>
 
     <form action="./blah" method="post">
-        <label>
-            Title:
-            <select name="title">
-                <option value="Mr">Mr.</option>
-                <option value="Mrs">Mrs.</option>
-                <option value="Ms">Ms.</option>
-            </select>
-        </label>
-        <br/>
-        <label for="name">
-            Your name:
-            <input id="name" name="name" type="text" placeholder="John Smith" required/>
-        </label>
-        <br/>
-        <label for="email">
-            Your email:
-            <input id="email" name="email" type="email" placeholder="blah@blah.com" required/>
-        </label>
-        <br/>
-        <label for="question">
-            Your question:
-            <textarea id="question" name="question" placeholder="Enter your question here"></textarea>
-        </label>
-        <br/>
-        <label for="color">
-            Guess the professor's favorite color:
-            <input id="color" name="color" type="color"/>
-        </label>
-        <br/>
-        <label for="dateOfBirth">
-            Guess the professor's birthday:
-            <input id="dateOfBirth" name="dateOfBirth" type="date"/>
-        </label>
-        <br/>
-        <label for="love">
-            How much do you love the professor?
-            <input for="love" name="love" type="range" min="1" max="11"/>
-        </label>
-        <br/>
+        <div class="form-inner-container">
+            <label>
+                <span>
+                    Title:
+                </span>
+                <select name="title">
+                    <option value="Mr">Mr.</option>
+                    <option value="Mrs">Mrs.</option>
+                    <option value="Ms">Ms.</option>
+                </select>
+            </label>
+            <label for="name">
+                <span>
+                    Full Name:
+                </span>
+                <input id="name" name="name" type="text" placeholder="John Smith" required/>
+            </label>
+            <label for="email">
+                <span>
+                    Your email:
+                </span>
+                <input id="email" name="email" type="email" placeholder="blah@blah.com" required/>
+            </label>
+            <label for="question">
+                <span>
+                    Your question:
+                </span>
+                <textarea id="question" name="question" placeholder="Enter your question here"></textarea>
+            </label>
+            <label for="color">
+                <span>
+                  Favorite color:
+                </span>
+                <input id="color" name="color" type="color"/>
+            </label>
+            <label for="dateOfBirth">
+                <span>
+                  Birthday:
+                </span>
+                <input id="dateOfBirth" name="dateOfBirth" type="date"/>
+            </label>
+        </div>
         <button type="submit">
             Send your question!
         </button>
+
     </form>
 </main>
 </body>
